# vramcalc

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
chart/vramcalc/: Chart.yaml  values.yaml
chart/vramcalc/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
k8s/: deployment.yaml  ingress.yaml  service.yaml
src/vramcalc/: calc.py  config.py  main.py  models.py  presets.py
tests/: test_api.py  test_calc.py
